ecmascript/parser/tests/test262-error-references/fail/c5f9c5bfdf66ef66.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/c5f9c5bfdf66ef66.js:1:3
  |
1 | a if;
  |   ^^

